Fix wrong translate for burger on mobile

--- a/_sass/styles/_menu.scss
+++ b/_sass/styles/_menu.scss
@@ -23,8 +23,8 @@
         z-index: 10;
         .menu-top_expand  {
                 .bar_top {
-                    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-                    transform: rotate(-45deg) translate(-9px, 6px);
+                    -webkit-transform: rotate(-45deg) translate(-8px, 8px);
+                    transform: rotate(-45deg) translate(-8px, 8px);
                   }
                   
                   .bar_middle {opacity: 0;}
